[gd_scene load_steps=35 format=3 uid="uid://cvj0v3fd5brce"]

[ext_resource type="Script" path="res://scripts/Main_Menu.gd" id="1_gidca"]
[ext_resource type="Texture2D" uid="uid://dqrwxtg4cuk8m" path="res://assets/Menu.png" id="2_n0ius"]
[ext_resource type="Texture2D" uid="uid://bpq6gkrdk2tgk" path="res://assets/4498fd18c59c6d058bd083fa6c2b7f96-resized.png" id="3_dqk01"]
[ext_resource type="Texture2D" uid="uid://dlmt0ef2xieqi" path="res://UI/yellowRectNormal.png" id="5_aujvq"]
[ext_resource type="FontFile" uid="uid://cef4gbi7nqx3w" path="res://Fonts/Gen Jyuu Gothic Monospace Heavy.ttf" id="6_6abgh"]
[ext_resource type="Texture2D" uid="uid://k71w56ukwmtg" path="res://UI/settingsBtn.png" id="6_dkl35"]
[ext_resource type="Script" path="res://scripts/setting.gd" id="7_qq5cb"]
[ext_resource type="Texture2D" uid="uid://c7ek5yw24hrme" path="res://UI/english.png" id="8_ybnqw"]
[ext_resource type="Texture2D" uid="uid://b0wkyi22ihd6u" path="res://UI/jP.png" id="9_y14s6"]
[ext_resource type="Texture2D" uid="uid://d1lemegy2hs7f" path="res://UI/closeBtn.png" id="10_r3u6n"]
[ext_resource type="Texture2D" uid="uid://dx4ynppg1bpxo" path="res://UI/soundOffBtn.png" id="11_51kf5"]
[ext_resource type="Texture2D" uid="uid://6lihqxf3ernf" path="res://UI/soundOnBtn.png" id="12_jodt6"]
[ext_resource type="AudioStream" uid="uid://bgmtjlruqdaxg" path="res://sounds/BGM.wav" id="13_0wohq"]
[ext_resource type="Script" path="res://scenes/VolumSlider.gd" id="13_xbqbn"]

[sub_resource type="LabelSettings" id="LabelSettings_7c4dm"]
line_spacing = -36.455
font = ExtResource("6_6abgh")
font_size = 111
font_color = Color(0.999999, 0.540884, 0.125016, 1)
outline_size = 40

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6753u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_msbvj"]

[sub_resource type="LabelSettings" id="LabelSettings_mow2v"]
font = ExtResource("6_6abgh")
font_size = 71
font_color = Color(0.400705, 0.238802, 0.0360782, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t5kos"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6qk4t"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.192157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d67fr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36e81"]
bg_color = Color(0.957918, 0.80729, 0.61882, 1)
border_color = Color(0.993597, 0.706825, 0.793039, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing_size = 0.01

[sub_resource type="LabelSettings" id="LabelSettings_3dkpj"]
font = ExtResource("6_6abgh")
font_size = 120
font_color = Color(0, 0, 0, 1)
outline_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7sqr0"]
bg_color = Color(1, 0.67451, 0.670588, 0)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3s5b"]
bg_color = Color(0.6, 0.6, 0.6, 0.588235)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nsxmh"]
bg_color = Color(0.6, 0.6, 0.6, 0.368627)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_umnnl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uw0xo"]
bg_color = Color(0.886966, 0.545404, 0.599298, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cqvex"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_max72"]
bg_color = Color(0.6, 0.6, 0.6, 0.572549)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_51u43"]
bg_color = Color(0.6, 0.6, 0.6, 0.388235)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwxww"]
bg_color = Color(0.909804, 0.360784, 0.721569, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmil1"]
bg_color = Color(1, 0.284297, 0.346101, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1h3l"]
bg_color = Color(0.419221, 0, 0.0829647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gidca")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -653.0
offset_top = -364.0
offset_right = 1267.0
offset_bottom = 716.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.678022, 0.678022)
texture = ExtResource("2_n0ius")

[node name="BG2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -655.0
offset_top = -367.0
offset_right = 2670.0
offset_bottom = 1508.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.38997, 0.38997)
texture = ExtResource("3_dqk01")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 261.0
offset_top = 44.0
offset_right = 1047.0
offset_bottom = 387.0
text = "Whisker
The Detective"
label_settings = SubResource("LabelSettings_7c4dm")
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 410.0
offset_right = 895.0
offset_bottom = 580.0
scale = Vector2(0.639999, 0.639999)
theme_override_styles/normal = SubResource("StyleBoxEmpty_6753u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_msbvj")
icon = ExtResource("5_aujvq")

[node name="Label" type="Label" parent="StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"
label_settings = SubResource("LabelSettings_mow2v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 536.0
offset_right = 895.0
offset_bottom = 706.0
scale = Vector2(0.639999, 0.639999)
theme_override_styles/normal = SubResource("StyleBoxEmpty_6753u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_t5kos")
icon = ExtResource("5_aujvq")

[node name="Label" type="Label" parent="Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit
"
label_settings = SubResource("LabelSettings_mow2v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 522.0
offset_top = -326.0
offset_right = 530.0
offset_bottom = -318.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10.32, 10.32)
theme_override_styles/normal = SubResource("StyleBoxFlat_6qk4t")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d67fr")

[node name="Setting" type="TextureRect" parent="SettingButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 248.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0310067, 0.0310067)
texture = ExtResource("6_dkl35")

[node name="SettingPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_qq5cb")

[node name="Panel2" type="Panel" parent="SettingPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -713.0
offset_top = -327.0
offset_right = -713.0
offset_bottom = -327.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(36.8115, 18.8)

[node name="Panel" type="Panel" parent="SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.0
offset_top = -121.0
offset_right = -261.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(11.8067, 6.50019)
theme_override_styles/panel = SubResource("StyleBoxFlat_36e81")

[node name="LabelLanguage" type="Label" parent="SettingPanel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0698755
anchor_top = 0.219224
anchor_right = 0.0698761
anchor_bottom = 0.219224
offset_right = 793.0
offset_bottom = 230.0
scale = Vector2(0.0216527, 0.042399)
text = "Language"
label_settings = SubResource("LabelSettings_3dkpj")
metadata/_edit_use_anchors_ = true

[node name="LabelSound" type="Label" parent="SettingPanel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0754717
anchor_top = 0.55
anchor_right = 27.7925
anchor_bottom = 4.225
offset_right = 519.0
offset_bottom = 230.0
scale = Vector2(0.0216527, 0.042399)
text = "Volume"
label_settings = SubResource("LabelSettings_3dkpj")
metadata/_edit_use_anchors_ = true

[node name="ENButton" type="Button" parent="SettingPanel/Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 10.0
offset_right = 35.0
offset_bottom = 17.0
theme_override_styles/normal = SubResource("StyleBoxFlat_7sqr0")
theme_override_styles/hover = SubResource("StyleBoxFlat_g3s5b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nsxmh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_umnnl")

[node name="Panel" type="Panel" parent="SettingPanel/Panel/ENButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.75725
offset_top = -0.615658
offset_right = -1.75725
offset_bottom = -0.615658
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.15999, 1.15999)
theme_override_styles/panel = SubResource("StyleBoxFlat_uw0xo")

[node name="ENflag" type="TextureRect" parent="SettingPanel/Panel/ENButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.255228
anchor_top = 0.48924
anchor_right = 0.25524
anchor_bottom = 0.48924
offset_left = -4.39764
offset_top = -3.27118
offset_right = 1395.61
offset_bottom = 1396.73
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0018773, 0.00339199)
texture = ExtResource("8_ybnqw")

[node name="LabelEN" type="Label" parent="SettingPanel/Panel/ENButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.400142
anchor_top = 0.223063
anchor_right = 0.400143
anchor_bottom = 0.223063
offset_left = -2.55482
offset_top = -2.1771
offset_right = 499.445
offset_bottom = 447.823
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0216527, 0.042399)
text = "EN"
label_settings = SubResource("LabelSettings_3dkpj")
autowrap_mode = 3

[node name="JPButton" type="Button" parent="SettingPanel/Panel"]
layout_mode = 0
offset_left = 37.267
offset_top = 9.99971
offset_right = 50.267
offset_bottom = 16.9997
theme_override_styles/normal = SubResource("StyleBoxFlat_cqvex")
theme_override_styles/hover = SubResource("StyleBoxFlat_max72")
theme_override_styles/pressed = SubResource("StyleBoxFlat_51u43")
theme_override_styles/focus = SubResource("StyleBoxFlat_gwxww")

[node name="Panel2" type="Panel" parent="SettingPanel/Panel/JPButton"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.10107
offset_top = -0.615368
offset_right = -1.10107
offset_bottom = -0.615368
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.15999, 1.15999)
theme_override_styles/panel = SubResource("StyleBoxFlat_uw0xo")

[node name="LabelJP" type="Label" parent="SettingPanel/Panel/JPButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.400142
anchor_top = 0.223063
anchor_right = 0.400143
anchor_bottom = 0.223063
offset_left = -1.55984
offset_top = -2.63833
offset_right = 500.44
offset_bottom = 447.362
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0216527, 0.042399)
text = "JP"
label_settings = SubResource("LabelSettings_3dkpj")
autowrap_mode = 3

[node name="TextureRect" type="TextureRect" parent="SettingPanel/Panel/JPButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0846977
anchor_top = 0.175819
anchor_right = 74.1348
anchor_bottom = 138.181
offset_left = -1.18577
offset_top = -0.922759
offset_right = 36.163
offset_bottom = 33.0381
scale = Vector2(0.003, 0.005)
texture = ExtResource("9_y14s6")
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="Button" parent="SettingPanel/Panel"]
layout_mode = 0
offset_left = 49.6328
offset_top = -2.76915
offset_right = 57.6328
offset_bottom = 5.23085
scale = Vector2(0.567354, 0.96007)
theme_override_styles/normal = SubResource("StyleBoxFlat_xmil1")
theme_override_styles/hover = SubResource("StyleBoxFlat_l1h3l")

[node name="TextureRect" type="TextureRect" parent="SettingPanel/Panel/CloseButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.23928
offset_top = 1.76264
offset_right = 250.239
offset_bottom = 249.763
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0141601, 0.0141601)
texture = ExtResource("10_r3u6n")

[node name="TextureRect" type="TextureRect" parent="SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 21.0
offset_right = 182.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.239999, 0.239999)
texture = ExtResource("11_51kf5")

[node name="TextureRect2" type="TextureRect" parent="SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 212.0
offset_top = 21.0
offset_right = 468.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.239999, 0.239999)
texture = ExtResource("12_jodt6")

[node name="VolumSlider" type="HSlider" parent="SettingPanel"]
layout_mode = 0
offset_left = 629.0
offset_top = 399.0
offset_right = 770.0
offset_bottom = 415.0
scale = Vector2(1.4, 1.4)
max_value = 1.0
step = 0.001
script = ExtResource("13_xbqbn")
bus_name = "Master"

[node name="SoundController" type="Node" parent="."]

[node name="BGMusic" type="AudioStreamPlayer" parent="SoundController"]
stream = ExtResource("13_0wohq")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="SettingPanel/Panel/ENButton" to="SettingPanel" method="_on_en_button_pressed"]
[connection signal="pressed" from="SettingPanel/Panel/JPButton" to="SettingPanel" method="_on_jp_button_pressed"]
[connection signal="pressed" from="SettingPanel/Panel/CloseButton" to="SettingPanel" method="_on_close_button_pressed"]
